@startuml
[*] --> Stranger
Stranger --> Guest : authenticationFail
Stranger --> Member : authenticationSuccess
Stranger : o:isStranger[bool]

Guest --> LoggingIn : loginRequest
Guest : i:isGuest[bool]
Guest : o:isGuest[bool]
Guest : o:message[string]

Member --> Guest : logout
Member : i:username[string]

LoggingIn --> Guest : loginFail \n t:message[string]
LoggingIn --> Member : loginSuccess
@enduml